@startuml
entity "User" as user {
  *id : ObjectId <<PK>>
  --
  *username : String <<UNIQUE>>
  *name : String
  *email : String <<UNIQUE>>
  *password : String
  is_staff : Boolean
  is_active : Boolean
  created_at : Date <<AUTO>>
  last_login : Date <<AUTO>>
}

entity "History" as history {
  *id : String <<PK>>
  --
  *content: String
  *history_set:  <<FK>>
  created_at: Date <<AUTO>>
}

entity "HistorySet" as historySet {
  *id : String <<PK>>
  --
  *title: String
  *user: User <<FK>>
  created_at: Date <<AUTO>>
}

history }|--|| historySet : has many
user ||--o{ historySet : has many
@enduml